--- a/src/Components/Overview/ModalGallery/ModalGallery.scss
+++ b/src/Components/Overview/ModalGallery/ModalGallery.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 15px;
+    padding: 0 0.938rem;
     height: 58.125rem;
     overflow: auto;
     position: relative;
@@ -36,7 +36,7 @@
     .modal-thumbnail-image {
       width: 120px;
       height: 120px;
-      padding-bottom: 15px;
+      padding-bottom: 0.938rem;
       opacity: 0.75;
       transition: 0.3s ease all;
       cursor: pointer;
@@ -54,7 +54,7 @@
     .current-modal-thumbnail {
       opacity: 1;
       img {
-        border: 2px solid black;
+        border: 3px solid rgba(255, 255, 255, 0.749);
       }
     }
   }
